--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>appie</title>
 
     <!-- Favicon Link -->
-    <link rel="shortcut icon" href="imgs/favicon-32x32.png" />
+    <link rel="shortcut icon" href="imgs/favicon32x32.webp" />
 
     <!-- CSS Links -->
     <link rel="stylesheet" href="css/reusable.css" />
@@ -36,7 +36,7 @@
   </head>
   <body>
     <header class="header primary-background-color-shade">
-      <img class="logo" src="imgs/logo.png" alt="appie logo" />
+      <img class="logo" src="imgs/logo.webp" alt="appie logo" />
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li>
@@ -161,22 +161,22 @@
               <div class="testimonials-faces">
                 <img
                   class="customer-photo"
-                  src="imgs/people/customer-1.jpg"
+                  src="imgs/people/customer-1.webp"
                   alt="customer-1-photo "
                 />
                 <img
                   class="customer-photo"
-                  src="imgs/people/customer-2.jpg"
+                  src="imgs/people/customer-2.webp"
                   alt="customer-2-photo "
                 />
                 <img
                   class="customer-photo"
-                  src="imgs/people/customer-4.jpg"
+                  src="imgs/people/customer-4.webp"
                   alt="customer-4-photo "
                 />
                 <img
                   class="customer-photo"
-                  src="imgs/people/customer-5.jpg"
+                  src="imgs/people/customer-5.webp"
                   alt="customer-5-photo "
                 />
               </div>
@@ -188,7 +188,7 @@
           </div>
           <img
             class="section-img hero-img"
-            src="imgs/hero.png"
+            src="imgs/hero.webp"
             alt="appie. mobile app screen"
           />
         </div>
@@ -426,7 +426,7 @@
           <div class="img-box">
             <img
               class="section-img"
-              src="imgs/about-thumb.png"
+              src="imgs/about-thumb.webp"
               alt="about-thumb"
             />
           </div>
@@ -510,7 +510,7 @@
             </div>
             <img
               class="section-img"
-              src="imgs/features-thumb-2.png"
+              src="imgs/features-thumb2.webp"
               alt="appie features thumbnail-2"
             />
           </div>
@@ -555,7 +555,7 @@
             <div class="video-and-icon">
               <img
                 class="video-thumbnail"
-                src="imgs/video-thumb-1.jpg"
+                src="imgs/video-thumb-1.webp"
                 alt="learn-more-video-thumb"
               />
               <ion-icon class="video-icon" name="play-circle"></ion-icon>
@@ -563,7 +563,7 @@
 
             <img
               class="video-thumbnail"
-              src="imgs/video-slide-1.jpg"
+              src="imgs/video-slide-1.webp"
               alt="learn-more-video-slide"
             />
 
@@ -798,7 +798,7 @@
             <div class="testimonial-card__img-content">
               <img
                 class="testimonial-card__img"
-                src="imgs/people/customer-2.jpg"
+                src="imgs/people/customer-2.webp"
                 alt="testimonial-1"
               />
               <ul class="stars-list">
@@ -877,54 +877,54 @@
             <div class="first-row">
               <img
                 class="sponser-card"
-                src="imgs/sponsers/sponser-1.png"
+                src="imgs/sponsers/sponser-1.webp"
                 alt="sponser-icon-1"
               />
               <img
                 class="sponser-card"
-                src="imgs/sponsers/sponser-2.png"
+                src="imgs/sponsers/sponser-2.webp"
                 alt="sponser-icon-2"
               />
               <img
                 class="sponser-card"
-                src="imgs/sponsers/sponser-3.png"
+                src="imgs/sponsers/sponser-3.webp"
                 alt="sponser-icon-3"
               />
               <img
                 class="sponser-card"
-                src="imgs/sponsers/sponser-4.png"
+                src="imgs/sponsers/sponser-4.webp"
                 alt="sponser-icon-4"
               />
               <img
                 class="sponser-card"
-                src="imgs/sponsers/sponser-5.png"
+                src="imgs/sponsers/sponser-5.webp"
                 alt="sponser-icon-5"
               />
               <img
                 class="sponser-card"
-                src="imgs/sponsers/sponser-6.png"
+                src="imgs/sponsers/sponser-6.webp"
                 alt="sponser-icon-6"
               />
             </div>
             <div class="second-row">
               <img
                 class="sponser-card"
-                src="imgs/sponsers/sponser-7.png"
+                src="imgs/sponsers/sponser-7.webp"
                 alt="sponser-icon-7"
               />
               <img
                 class="sponser-card"
-                src="imgs/sponsers/sponser-8.png"
+                src="imgs/sponsers/sponser-8.webp"
                 alt="sponser-icon-8"
               />
               <img
                 class="sponser-card"
-                src="imgs/sponsers/sponser-9.png"
+                src="imgs/sponsers/sponser-9.webp"
                 alt="sponser-icon-9"
               />
               <img
                 class="sponser-card"
-                src="imgs/sponsers/sponser-10.png"
+                src="imgs/sponsers/sponser-10.webp"
                 alt="sponser-icon-10"
               />
             </div>
@@ -938,7 +938,7 @@
         <div class="footer-grid">
           <div class="logo-col footer-col">
             <a href="#">
-              <img src="imgs/logo.png" alt="logo" />
+              <img src="imgs/logo.webp" alt="logo" />
             </a>
 
             <p class="footer-description">
