Fix Broken Images

--- a/index.html
+++ b/index.html
@@ -528,24 +528,24 @@
 
           <div class="icons-cards">
             <div class="icon-card">
-              <img src="imgs/icons/counter-icon-1.svg" alt="counter-icon-1" />
+              <img src="imgs/icons/counter-icon-1.webp" alt="counter-icon-1" />
               <p class="title">45k+</p>
               <p class="description">Active Installations</p>
             </div>
             <div class="icon-card">
-              <img src="imgs/icons/counter-icon-2.svg" alt="counter-icon-2" />
+              <img src="imgs/icons/counter-icon-2.webp" alt="counter-icon-2" />
 
               <p class="title">108+</p>
               <p class="description">Active Installations</p>
             </div>
             <div class="icon-card">
-              <img src="imgs/icons/counter-icon-3.svg" alt="counter-icon-3" />
+              <img src="imgs/icons/counter-icon-3.webp" alt="counter-icon-3" />
 
               <p class="title">307+</p>
               <p class="description">Active Installations</p>
             </div>
             <div class="icon-card">
-              <img src="imgs/icons/counter-icon-4.svg" alt="counter-icon-4" />
+              <img src="imgs/icons/counter-icon-4.webp" alt="counter-icon-4" />
               <p class="title">725k+</p>
               <p class="description">Active Installations</p>
             </div>
